Set up basic fetching weather data and create object from that data

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="index.js" defer></script>
 </head>
 <body>
-  This will be the Weather App.
-  <p id="test"></p>
+  This is the Weather App.
+  <image id="img"></image>
 </body>
 </html>
