Create working skeletal version of the app

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
   This is the Weather App.
-  <image id="img"></image>
+  <form>
+    <label for="city">City:</label>
+    <input type="text" id="city" name="city" required><br>
+    <label for="state">State (US):</label>
+    <input type="text" id="state" name="state"><br>
+    <label for="country">Country Code:</label>
+    <input type="text" id="country" name="country"><br>
+  </form>
+  <button id="btn">Get the Weather!</button>
+  <p id="p"></p>
 </body>
 </html>
