Add temperature format option to form and displayed weather

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <input type="text" id="state" name="state"><br>
     <label for="country">Country Code:</label>
     <input type="text" id="country" name="country"><br>
+    <div>
+      <input type="radio" id="f" name="temperature-format" value="f" checked>
+      <label for="f">Fahrenheit</label>
+      <input type="radio" id="c" name="temperature-format" value="c">
+      <label for="c">Celsius</label>
+    </div>
   </form>
   <button id="btn">Get the Weather!</button>
   <p id="p"></p>
