Add search for weather for selected city and display of weather summary

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <button id="btn">Search for your city!</button>
   <p id="p"></p>
   <div id="search-results"></div>
+  <div id="weather-results"></div>
 </body>
 </html>
