Prevent submission of form if Enter is pressed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   This is the Weather App.
-  <form>
+  <form id="form">
     <label for="city">City:</label>
     <input type="text" id="city" name="city" required><br>
   </form>
