Apply basic styling

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   <script src="index.js" defer></script>
 </head>
 <body>
-  This is the Weather App.
-  <form id="form">
-    <label for="city">City:</label>
-    <input type="text" id="city" name="city" required><br>
-  </form>
-  <button id="btn">Search for your city!</button>
-  <p id="p"></p>
-  <div id="search-results"></div>
-  <div id="weather-results"></div>
+  <div class="main-container">
+    <div class="heading">Weather App</div>    
+    <form id="form">
+      <label for="city" id="label">Enter a city:</label>
+      <input type="text" id="city" name="city" required><br>
+    </form>
+    <button id="btn">Search for your city!</button>
+    <p id="p"></p>
+    <div id="search-results"></div>
+    <div id="weather-results"></div>
+  </div> 
 </body>
 </html>
